--- a/css/general.css
+++ b/css/general.css
@@ -15,3 +15,24 @@
 * {
     font-family: Quicksand;
 }
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    font-family: Arial;
+}
+
+.hr-small {
+    width:20%;
+    text-align:center;
+}
+
+hr {
+    width: 80%;
+    text-align: center;
+}
