--- a/css/parallax.css
+++ b/css/parallax.css
@@ -9,5 +9,5 @@
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
