--- a/css/general.css
+++ b/css/general.css
@@ -20,6 +20,10 @@ body,html {
     height: 100%;
 }
 
+section {
+    scroll-margin-top: 40px; /* should match navbar height */
+}
+
 .flex-container {
     display: flex;
     flex-direction: column;
@@ -39,4 +43,9 @@ h1 {
 hr {
     width: 80%;
     text-align: center;
+}
+
+.scrollableContent {
+    margin-top: 40px; /* should match topnav height */
+    height: 100%;
 }
