--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,3 @@
-/* Add a black background color to the top navigation */
 ul {
     list-style-type: none;
     margin: 0;
@@ -6,13 +5,9 @@ ul {
     overflow: hidden;
 }
 
-nav {
-    background-color: #da8442;
-    position: fixed;
-}
-
 .nav-item {
     float: left;
+    height: 100%;
 }
 
 .nav-item a {
@@ -30,6 +25,25 @@ nav {
 .topnav {
     display: flex;
     justify-content: flex-end;
+    background-color: #da8442;
+    position: fixed;
+    top:0px;
+    width: 100%;
+    height:40px;
+}
+
+/* Style the hamburger menu */
+.hamburger {
+    display: none;
+    /* Initially hidden, only shown on mobile */
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    z-index: 1;
+    align-self: center;
 }
 
 /* Style the links inside the navigation bar
@@ -52,4 +66,45 @@ nav {
 .topnav a.active {
     background-color: #04AA6D;
     color: white;
+}
+
+#navbar-links {
+    display: flex;
+    justify-content: flex-end;
+    /* Show navbar items in a row by default */
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
+
+/* Mobile view: Make the navbar items stack vertically */
+@media (max-width: 768px) {
+    #navbar-links {
+        /* Hide navbar items by default */
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        position: absolute;
+        top: 50px;
+        /* Just below the navbar */
+        left: 0;
+        background-color: #da8442;
+        z-index: 0;
+    }
+
+    .nav-item {
+        text-align: left;
+        /* Align text to the left for mobile */
+        width: 100%;
+    }
+
+    /* Show the hamburger icon on mobile */
+    .hamburger {
+        display: block;
+    }
+
+    /* Show the navbar items when hamburger menu is clicked */
+    #navbar-links.active {
+        display: flex;
+    }
 }
