--- a/css/general.css
+++ b/css/general.css
@@ -29,6 +29,8 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 h1 {
