--- a/css/navbar.css
+++ b/css/navbar.css
@@ -28,7 +28,10 @@ ul.nav {
     background-color: #da8442;
     position: fixed;
     top:0px;
-    width: 100%;
+    left: 0;
+    right: 0;
+    margin-left:8px;
+    margin-right:8px;
     height:40px;
 }
 
