--- a/css/general.css
+++ b/css/general.css
@@ -44,8 +44,14 @@ h2 {
 
 p {
     text-align: center;
+    line-height: 1.5;
     margin-left: 15%;
     margin-right: 15%;
+}
+
+li {
+    text-align: left;
+    line-height: 1.5;
 }
 
 #countdown {
@@ -119,4 +125,16 @@ hr {
 #rsvp_button:focus {
     outline: none;
     box-shadow: 0px 0px 6px rgba(255, 179, 107, 0.6);
+}
+
+@media screen and (max-width: 768px) {
+    .flex-container {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    p {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
 }
