--- a/css/carousel.css
+++ b/css/carousel.css
@@ -33,25 +33,32 @@
     width: auto;
     margin-top: -22px;
     padding: 16px;
-    background-color: #d7dfe0;
-    color: #19130c;
+    background: linear-gradient(135deg, #5c6d3c, #7a8e52);
+    color: white;
     font-weight: bold;
     font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
+    border: none;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+    transition: all 0.3s ease-in-out;
     user-select: none;
+}
+
+.prev {
+    border-radius: 3px 0 0 3px;
 }
 
 /* Position the "next button" to the right */
 .next {
     right: 0;
-    border-radius: 3px 0 0 3px;
+    border-radius: 0 3px 3px 0;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    background: linear-gradient(135deg, #7a8e52, #a1b583);
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    color: white;
 }
 
 /* The dots/bullets/indicators */
@@ -60,7 +67,7 @@
     height: 15px;
     width: 15px;
     margin: 0 2px;
-    background-color: #d7dfe0;;
+    background-color: #8a9c6e;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
@@ -68,7 +75,7 @@
 
 .active,
 .dot:hover {
-    background-color: #19130c;
+    background-color: #44502d;
 }
 
 /* Fading animation */
