--- a/css/general.css
+++ b/css/general.css
@@ -42,6 +42,14 @@ h2 {
     text-align: center;
 }
 
+h3 {
+    margin-left: 15%;
+    margin-right: 15%;
+    line-height: 1.3;
+    font-size: medium;
+    text-align: center;
+}
+
 p {
     text-align: center;
     line-height: 1.5;
@@ -139,6 +147,11 @@ hr {
     }
 
     p {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
+    h3 {
         margin-left: 5%;
         margin-right: 5%;
     }
